# coffee_app

./: .gitignore  README.md  coffee_app.py  pyproject.toml
.github/workflows/: linter.yml  pytest.yml
app/: coffee_app.py
app/classes/: data_classes.py  machine_classes.py
classes/: data_classes.py  machine_classes.py
src/app/: coffee_app.py
src/app/classes/: machine_classes.py
src/tests/: test_coffee_app.py  test_machine_classes.py
tests/: test_coffee_app.py  test_machine_classes.py
