[tool.poetry]
name = "coffee-app"
version = "0.1.0"
description = "Coffee Application"
authors = ["Sergey <sergeymaksheev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-mock = "^3.10.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
