[tool.poetry]
name = "coffee-app"
version = "0.1.0"
description = "Coffee Application"
authors = ["Sergey <sergeymaksheev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-mock = "^3.10.0"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"
mypy = "^0.991"
pylint = "^2.15.10"
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.pylint]
line-length = 120

[tool.isort]
line-length = 120
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
no_lines_before = ['STDLIB', 'LOCALFOLDER']
multi_line_output = 3
lines_after_imports = 2


[tool.mypy]
files = "."
follow_import = "skip"
ignore_missing_imports = true